--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -25,7 +25,7 @@
         <form class="header-search" action="/search.php">
             <input id="header-search-input" type="text" name="query" placeholder="Search...">
             <div class="form-button-container">
-                <button id="header-search-button" class="form-button-submit">
+                <button id="header-search-button" class="button button-secondary">
                     <span>Search</span>
                 </button>
             </div>
