--- a/orange/skins/qobo/templates/components/_comment_input.twig
+++ b/orange/skins/qobo/templates/components/_comment_input.twig
@@ -4,6 +4,6 @@
     </div>
     <textarea class="form-submit-wide" id="comment_contents" name="comment" maxlength="1000"
               style="overflow:hidden;resize:vertical" rows="4"></textarea>
-    <input type="submit" id="comment_button" name="post" class="form-button-submit"
+    <input type="submit" id="comment_button" name="post" class="button button-primary"
            value="Add comment">
 </div>
