--- a/orange/skins/qobo/templates/edit.twig
+++ b/orange/skins/qobo/templates/edit.twig
@@ -48,7 +48,7 @@
                 {% endif %}
 
                 <div class="form-button-container">
-                    <input type="submit" id="upload" name="upload" class="form-button-submit"
+                    <input type="submit" id="upload" name="upload" class="button button-primary"
                            value="Save changes">
                 </div>
             </form>
