--- a/orange/skins/qobo/templates/login.twig
+++ b/orange/skins/qobo/templates/login.twig
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="form-button-container">
-                        <input type="submit" class="form-button-submit" value="Login" name="loginsubmit">
+                        <input type="submit" class="button button-primary" value="Login" name="loginsubmit">
                     </div>
                 </form>
             </div>
