--- a/orange/skins/qobo/templates/read.twig
+++ b/orange/skins/qobo/templates/read.twig
@@ -6,6 +6,6 @@
 	<div class="content-box">
 		<h1>{{ data.title }}</h1>
 		<p>By {{ user_link(data.author) }}, {{ data.published | relative_time }}</p>
-		<p>{{ data.contents | markdown_user_written }}</p>
+		<p>{{ data.contents | markdown_user_journal }}</p>
 	</div>
 {% endblock %}
