--- a/orange/skins/qobo/templates/register.twig
+++ b/orange/skins/qobo/templates/register.twig
@@ -30,7 +30,7 @@
                     </div>
 
                     <div class="form-button-container">
-                        <input type="submit" class="form-button-submit" value="Register" name="registersubmit">
+                        <input type="submit" class="button button-primary" value="Register" name="registersubmit">
                     </div>
                 </form>
                 <div>By registering on Qobo, you accept the <a href="/privacy.php">Privacy Policy</a>.</div>
