--- a/orange/skins/qobo/templates/settings.twig
+++ b/orange/skins/qobo/templates/settings.twig
@@ -72,7 +72,7 @@
             </div>
 
             <div class="form-button-container">
-                <input type="submit" id="upload" name="save" class="form-button-submit"
+                <input type="submit" id="upload" name="save" class="button button-primary"
                        value="Save changes">
             </div>
         </form>
