--- a/orange/skins/qobo/templates/write.twig
+++ b/orange/skins/qobo/templates/write.twig
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="form-button-container">
-                        <input class="form-button-submit" type="submit" id="upload" name="upload"
+                        <input class="button button-primary" type="submit" id="upload" name="upload"
                                value="Submit">
                     </div>
                 </div>
