--- a/biscuit/stylesheets/_sections.scss
+++ b/biscuit/stylesheets/_sections.scss
@@ -1,7 +1,10 @@
 .section {
   .section-title {
+    color: $primary-darker;
+
     h1, h2, h3, h4, h5, h6 {
       display: inline;
+      font-weight: normal;
     }
 
     a {
