--- a/biscuit/stylesheets/_watch_page.scss
+++ b/biscuit/stylesheets/_watch_page.scss
@@ -1,3 +1,14 @@
+.submission {
+  text-align: center;
+  background: darken($content-box-border-color, 7.5%);
+
+  .img-submission {
+    max-width: 700px;
+    max-height: 700px;
+    padding: 15px 0;
+  }
+}
+
 div.submission-stats-box {
   margin: 6px 0;
   height: 50px;
