--- a/biscuit/stylesheets/common.scss
+++ b/biscuit/stylesheets/common.scss
@@ -1,10 +1,11 @@
 @import 'variables';
 
-@import 'responsiveness';
+@import 'mixins/responsiveness';
+@import 'mixins/gradients';
 
-:root { font-family: 'Inter', sans-serif; }
+:root { font-family: $font; }
 @supports (font-variation-settings: normal) {
-	:root { font-family: 'Inter var', sans-serif; }
+	:root { font-family: $font-var; }
 }
 
 *,
@@ -31,18 +32,27 @@ td, th
 a
 {
 	text-decoration: none;
-	color: #FF8515;
+	color: $primary-darker;
 }
 
 table.c1
 {
 	width: 100%;
+	border: 1px solid darken($secondary, 15%);
+	tbody {
+		margin: 0;
+	}
 }
 
 tr.h
 {
-	background-color: #ffaf46;
+	background-color: darken($secondary, 15%);
 	color: black;
+}
+
+tr {
+	border: 1px solid darken($secondary, 15%);
+	padding: 20px;
 }
 
 img
@@ -65,11 +75,6 @@ h5 { font-size: 12px; }
 
 h6 { font-size: 10px; }
 
-ul {
-	padding: 0;
-	margin: 0;
-}
-
 img.img-responsive {
 	width: 100%;
 }
@@ -81,16 +86,6 @@ div.label {
 
 div.clear {
 	clear: both;
-}
-
-span.elink {
-	text-decoration: none;
-	border-bottom: 1px dotted #864e14;
-}
-
-span.fade
-{
-	color: darkgray;
 }
 
 div.icons span
@@ -110,9 +105,24 @@ input[type]:not([type=file]):not([type=submit]) {
 
 textarea:focus,
 input[type]:not([type=file]):not([type=submit]):focus {
-	border-color: #fd8f08;
+	border-color: $primary;
 	outline: none;
-	box-shadow: 0 0 1px #fd8f08;
+	box-shadow: 0 0 1px $primary;
+}
+
+code {
+	color: #e83e3e;
+}
+
+pre {
+	background: #ffe8e8;
+	border-radius: 5px;
+	padding: 5px;
+	margin: 0;
+}
+
+.pfp {
+	border-radius: $pfp-roundness;
 }
 
 @import 'header';
@@ -124,6 +134,7 @@ input[type]:not([type=file]):not([type=submit]):focus {
 @import 'comments';
 @import 'sections';
 @import 'journals';
+@import 'buttons';
 
 @import 'watch_page';
 @import 'profile_page';
