--- a/orange/skins/qobo/templates/profile.twig
+++ b/orange/skins/qobo/templates/profile.twig
@@ -2,6 +2,15 @@
 
 {% set title = data.username %}
 
+{% set opengraph_type = "profile" %}
+{% set opengraph_username = data.username %}
+{% if data.about | trim is not empty %}
+    {% set opengraph_description = data.about %}
+{% else %}
+    {% set opengraph_description = "No description." %}
+{% endif %}
+{% set opengraph_image = profile_picture(data.username) %}
+
 {% block scripts %}
     <script>
         comment_type = 'profile';
