--- a/orange/skins/qobo/templates/watch.twig
+++ b/orange/skins/qobo/templates/watch.twig
@@ -2,6 +2,23 @@
 
 {% set title = submission.title %}
 
+{% if submission.description | trim is not empty %}
+    {% set opengraph_description = submission.description %}
+{% else %}
+    {% set opengraph_description = "No description." %}
+{% endif %}
+
+{% set opengraph_image = thumbnail(submission.id, submission.type) %}
+
+{% set opengraph_type = "article" %}
+{% set opengraph_published = submission.published | date("c") %}
+{% set opengraph_author = domain ~ "user?name=" ~ submission.author.info.username %}
+{% if submission.type == 0 %}
+    {% set opengraph_section = "Qobo video" %}
+{% elseif submission.type == 2 %}
+    {% set opengraph_section = "Qobo image" %}
+{% endif %}
+
 {% block scripts %}
     <script src="/assets/rater.js"></script>
     <script>
