Fix theme-color, and add support for non-OG metadata?

--- a/orange/skins/qobo/templates/read.twig
+++ b/orange/skins/qobo/templates/read.twig
@@ -7,6 +7,7 @@
 {% set opengraph_type = "article" %}
 {% set opengraph_published = data.published | date("c") %}
 {% set opengraph_author = domain ~ "user?name=" ~ data.author.info.username %}
+{% set metadata_author = data.author.info.username %}
 {% set opengraph_section = "Qobo journal" %}
 
 {% block content %}
