--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="img/css/common.css">
     <link rel="stylesheet" href="theme/famfamfam-silk.min.css">
     <link rel="stylesheet" href="theme/silk-companion.min.css">
-    <meta name="theme-color" content="#ff9800">
+    <meta name="theme-color" content="#DA20EA">
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:url" content="{{ page_url }}">
     <meta property="og:site_name" content="Qobo" />
@@ -19,21 +19,39 @@
     {% else %}
         <meta property="og:type" content="website" />
     {% endif %}
+
     {% if opengraph_type == "profile" %}
         <meta property="profile:username"
               content="{{ opengraph_username }}" />
     {% endif %}
-    <meta property="og:description"
-          content="{{ opengraph_description }}" />
-    {% if opengraph_image %}
-        <meta property="og:image" content="{{ opengraph_image }}">
+
+    {% if opengraph_description %}
+        <meta property="og:description"
+              content="{{ opengraph_description }}" />
+        <meta name="description" content="{{ opengraph_description }}">
+    {% else %}
+        <meta property="og:description"
+              content="Your content, your narration, your niche on the web." />
+        <meta name="description" content="Your content, your narration, your niche on the web.">
     {% endif %}
+
+    {% if opengraph_image %}
+        <meta property="og:image" content="{{ opengraph_image }}img/qobo_768x768.png">
+    {% else %}
+        <meta property="og:image" content="{{ domain }}">
+    {% endif %}
+
     {% if opengraph_author %}
         <meta property="article:author" content="{{ opengraph_author }}" />
     {% endif %}
+    {% if metadata_author %}
+        <meta name="author" content="{{ metadata_author }}">
+    {% endif %}
+
     {% if opengraph_section %}
         <meta property="article:section" content="{{ opengraph_section }}" />
     {% endif %}
+
     {% if opengraph_published %}
         <meta property="article:published_time" content="{{ opengraph_published }}" />
     {% endif %}
