--- a/orange/skins/qobo/templates/browse.twig
+++ b/orange/skins/qobo/templates/browse.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% set title = "Index" %}
+{% set title = "Browse" %}
 
 {% block content %}
     <div class="content-header">
