--- a/orange/skins/qobo/templates/register.twig
+++ b/orange/skins/qobo/templates/register.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% set title = "Login" %}
+{% set title = "Register" %}
 
 	{% block content %}
         <div class="content-header">
