--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -36,9 +36,9 @@
     {% endif %}
 
     {% if opengraph_image %}
-        <meta property="og:image" content="{{ opengraph_image }}img/qobo_768x768.png">
+        <meta property="og:image" content="{{ opengraph_image }}">
     {% else %}
-        <meta property="og:image" content="{{ domain }}">
+        <meta property="og:image" content="{{ domain }}img/qobo_768x768.png">
     {% endif %}
 
     {% if opengraph_author %}
