Custom thumbnail uploading, clean gitignore.

--- a/orange/skins/qobo/templates/edit.twig
+++ b/orange/skins/qobo/templates/edit.twig
@@ -47,6 +47,11 @@
                 </div>
                 {% endif %}
 
+                <div class="form-input">
+                    <label for="thumbnail">Custom thumbnail:</label>
+                    <input type="file" name="thumbnail" id="thumbnail">
+                </div>
+
                 <div class="form-button-container">
                     <input type="submit" id="upload" name="upload" class="button button-primary"
                            value="Save changes">
