--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -116,6 +116,9 @@
 </form>
 <div class="page">
     <div class="page-contents">
+        <div class="banner banner-secondary">
+            <p>On December 26th 2023, The Qobo website will be closed. Thank you for using Qobo</p>
+        </div>
         {% if user_ban_data %}
             <div class="banner banner-danger">
                 <p>This account has been banned for the following reason:</p>
