--- a/biscuit/stylesheets/_content_box.scss
+++ b/biscuit/stylesheets/_content_box.scss
@@ -27,6 +27,7 @@ div.content-header-right
 
 .content-box
 {
+    border: 1px solid $content-box-border-color;
     padding: 6px;
     overflow: hidden;
     word-break: break-word;
